--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,8 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endsWith(\".com\") # False"
+    "var email = \"art.vandelay@vandelay.co\"\n",
+    ".endsWith(\".com\") # False"
    ]
   },
   {
